--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <div class="content">
     <h1>Website is under maintenance.</h1>
-    <h2>Get back on June 15, 2025.</h2>
+    <h2>Get back very soon.</h2>
   </div>
 </body>
 </html>
